// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    3,500
  </h1>
</div>
`;

exports[`should render multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    22
     
    expenses
     totalling 
    45,82,31,568
  </h1>
</div>
`;
